objects/Order.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                    <default>true</default>
                    <label>Placed</label>
                </value>
                <value>
                    <fullName>InTransit</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <displayFormat>ORN-{0000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>product__c.Status__c</field>
                <operation>equals</operation>
                <value>Ready For Sale</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>case study</description>
        <label>Consumer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Units__c</fullName>
        <label>Ordered Units</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <formula>TEXT(Product_ID__r.Brand_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <formula>TEXT( Product_ID__r.Models__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_to_Notify__c</fullName>
        <formula>Consumer_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email to Notify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_for_Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe for Notify</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Order_date_rule</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>Order_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Don&apos;t use past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>greater_than_available_orders</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>(  Ordered_Units__c  &lt;  Product_ID__r.Available_Units__c)</errorConditionFormula>
        <errorMessage>Order units value should be greater than available units</errorMessage>
    </validationRules>
</CustomObject>